# odoo-mcp-gateway

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
odoo_mcp_gateway/: __init__.py  microsoft.py  minting.py
odoo_mcp_sso/: __init__.py  microsoft.py
scripts/: odoo-matrix.sh
tests/: _fixtures.py  test_minting.py  test_ms_sso.py
